Version 3.0.2
-------------
Added: Implementation (TypeMatchingArgumentInheritanceInstanceProvider) of IInstanceProvider creating inherited constructor arguments matching by type
Bugfix: Fixed internal Memory leak

Version 3.0.1
---------------
Added: Binding syntax extension method (NamedLikeFactoryMethod) for defining a named binding corresponding with a GetXYZ factory method


Version 3.0.0.0
---------------
Initial version