@@ -2,6 +2,7 @@ Version 3.0.2
 -------------
 Added: Implementation (TypeMatchingArgumentInheritanceInstanceProvider) of IInstanceProvider creating inherited constructor arguments matching by type
 Bugfix: Fixed internal Memory leak
+Bugfix: Fallback now supports multiple bindings
 
 Version 3.0.1
 ---------------
